test/e2e/kubernetes/workloads/calico-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-egress
spec:
  podSelector:
    matchLabels: {}
  policyTypes:
  - Egress
