test/e2e/kubernetes/workloads/cuda-vector-add.yaml
apiVersion: v1
kind: Pod
metadata:
  name: cuda-vector-add
spec:
  containers:
  - name: cuda-vector-add
    image: "k8s-gcrio.azureedge.net/cuda-vector-add:v0.1"
    resources:
      limits:
        nvidia.com/gpu: 1
  nodeSelector:
    beta.kubernetes.io/os: linux
