test/e2e/kubernetes/workloads/dns-liveness-cluster-first.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    test: liveness
  name: dns-liveness-cluster-first
spec:
  containers:
  - name: dns-liveness-cluster-first
    image: k8s.gcr.io/busybox
    args:
    - /bin/sh
    - -c
    - while true; do sleep 600; done
    livenessProbe:
      exec:
        command:
        - nslookup
        - bbc.co.uk
      initialDelaySeconds: 5
      periodSeconds: 5
  nodeSelector:
    beta.kubernetes.io/os: linux 
  dnsPolicy: ClusterFirst
