test/e2e/kubernetes/workloads/dns-liveness-windows.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    test: liveness
  name: dns-liveness-windows
spec:
  containers:
  - name: dns-liveness
    image: microsoft/windowsservercore:1803
    args:
    - cmd
    - /k
    - "FOR /L %N IN () DO timeout /t 60"
    livenessProbe:
      exec:
        command:
        - nslookup
        - bbc.co.uk
      initialDelaySeconds: 5
      periodSeconds: 5
  nodeSelector:
        beta.kubernetes.io/os: windows
