test/e2e/kubernetes/workloads/dns-liveness.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    test: liveness
  name: dns-liveness
spec:
  containers:
  - name: dns-liveness
    image: k8s.gcr.io/busybox
    args:
    - /bin/sh
    - -c
    - touch /tmp/healthy; sleep 30; rm -rf /tmp/healthy; sleep 600
    livenessProbe:
      exec:
        command:
        - nslookup
        - bbc.co.uk
      initialDelaySeconds: 5
      periodSeconds: 5
