test/e2e/kubernetes/workloads/kubectl-liveness.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kubectl-liveness
  labels:
    app: kubectl
spec:
  containers:
  - image: lachlanevenson/k8s-kubectl:latest
    name: kubectl-liveness
    command:
      - sleep
      - "1000000d"
    livenessProbe:
      exec:
        command:
        - kubectl
        - version
      initialDelaySeconds: 5
      periodSeconds: 5
  tolerations:
  - effect: NoSchedule
    key: node-role.kubernetes.io/master
    operator: "Exists"
  nodeSelector:
    kubernetes.io/role: master
  hostNetwork: true
  dnsPolicy: ClusterFirstWithHostNet
