test/e2e/kubernetes/workloads/nginx-master.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-master
  labels:
    app: nginx-master
spec:
  containers:
  - image: library/nginx:latest
    name: nginx-master
    command:
      - sleep
      - "1000000"
  tolerations:
  - effect: NoSchedule
    key: node-role.kubernetes.io/master
    operator: "Exists"
  nodeSelector:
    kubernetes.io/role: master
