test/e2e/kubernetes/workloads/pod-pvc.yaml
kind: Pod
apiVersion: v1
metadata:
  name: zone-pv-pod
spec:
  containers:
    - name: myfrontend
      image: nginx
      volumeMounts:
      - mountPath: "/mnt/azure"
        name: volume
  volumes:
    - name: volume
      persistentVolumeClaim:
        claimName: azure-managed-disk
